welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: not found: value nums
  var last = nums.length -1
             ^island:5: error: not found: value nums
    if (nums(i+1)<=nums(i)){
        ^island:5: error: not found: value nums
    if (nums(i+1)<=nums(i)){
                   ^