welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nbile=0
  var last = nums.length -1
  for (i <- 0 to last){
    if (nums(i+1)<=nums(i)){
    	nbile=nbile+1
    }
  }
   
  return nbile
}
